# serializer version: 1
# name: test_end_to_end_consistency_snapshot[len_16]
  list([
    dict({
      'field_provenance': dict({
        'default': '9646593030270266',
      }),
      'sample_provenance': '9938318233490123',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'default': '6309806401145978',
      }),
      'sample_provenance': '1581718076852697',
      'sample_uid': 2,
    }),
    dict({
      'field_provenance': dict({
        'default': '7283469191670294',
      }),
      'sample_provenance': '6142662548435238',
      'sample_uid': 3,
    }),
  ])
# ---
# name: test_end_to_end_consistency_snapshot[len_32]
  list([
    dict({
      'field_provenance': dict({
        'default': '9646593030270266913',
      }),
      'sample_provenance': '6638786295627243269',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'default': '6309806401145978549',
      }),
      'sample_provenance': '15747888698225521992',
      'sample_uid': 2,
    }),
    dict({
      'field_provenance': dict({
        'default': '7283469191670294049',
      }),
      'sample_provenance': '10060091228839426467',
      'sample_uid': 3,
    }),
  ])
# ---
# name: test_end_to_end_consistency_snapshot[len_64]
  list([
    dict({
      'field_provenance': dict({
        'default': '9646593030270266913',
      }),
      'sample_provenance': '6638786295627243269',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'default': '6309806401145978549',
      }),
      'sample_provenance': '15747888698225521992',
      'sample_uid': 2,
    }),
    dict({
      'field_provenance': dict({
        'default': '7283469191670294049',
      }),
      'sample_provenance': '10060091228839426467',
      'sample_uid': 3,
    }),
  ])
# ---
# name: test_end_to_end_consistency_snapshot[len_8]
  list([
    dict({
      'field_provenance': dict({
        'default': '96465930',
      }),
      'sample_provenance': '81606296',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'default': '63098064',
      }),
      'sample_provenance': '11608157',
      'sample_uid': 2,
    }),
    dict({
      'field_provenance': dict({
        'default': '72834691',
      }),
      'sample_provenance': '84526014',
      'sample_uid': 3,
    }),
  ])
# ---
